# simple-interpreter

./: CMakeLists.txt  Evaluate.h  EvaluateArithmeticStatment.cpp  EvaluateArithmeticStatment.h  EvaluateConditionStatement.cpp  EvaluateConditionStatement.h  EvaluateFunction.cpp  EvaluateFunction.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  FileReader.cpp  FileReader.h  Interpretation.cpp  Interpretation.h  SolvedStatement.cpp  SolvedStatement.h  Statement.cpp  Statement.h  Validate.cpp  Validate.h  main.cpp  sort.h
Collections/: BST.h  Heap.h
Evaluation/: ExpressionEvaluator.cpp  ExpressionEvaluator.h  GotoEvaluator.cpp  GotoEvaluator.h
Headers/: AssignmentStatment.h  Evaluate.h  FileReader.h  Interpretation.h  Statment.h  Validation.h
Parser/: Parser.cpp  Parser.h  StatementType.h  StatementValidator.cpp  StatementValidator.h
Sources/: AssignmentStatment.cpp  Evaluate.cpp  FileReader.cpp  Interpretation.cpp  Statment.cpp  Validation.cpp
Statements/: AssignmentStatement.cpp  AssignmentStatement.h  GotoStatement.cpp  GotoStatement.h  IfStatement.cpp  IfStatement.h  LabelStatement.cpp  LabelStatement.h  Statement.cpp  Statement.h
Tests/: EvaluationTests.cpp  TestGoto.cpp
datastructure/: Stack.cpp  Stack.h
evaluate/: Evaluate.cpp  Evaluate.h  EvaluateArithmeticStatment.cpp  EvaluateArithmeticStatment.h  EvaluateConditionStatement.cpp  EvaluateConditionStatement.h  EvaluateFunction.cpp  EvaluateFunction.h
lib/gtest/googlemock/docs/: cheat_sheet.md
statement/: ArithmeticStatement.cpp  ArithmeticStatement.h  Classify.cpp  Classify.h  ConditionStatmenet.cpp  ConditionStatmenet.h  FunctionStatement.cpp  FunctionStatement.h  SolvedStatement.cpp  SolvedStatement.h  Statement.cpp  Statement.h
validation/: Validate.cpp  Validate.h
